# NotesRUs

./: Cargo.toml  Dockerfile  README.md  ci.Dockerfile
.github/workflows/: Docker_Build.yaml
kubernetes/: 5-deployment.yaml
migration/: Cargo.toml
migration/src/: m20220101_000001_users_table.rs  m20240726_065639_clients_table.rs  m20240727_061854_posts_table.rs  m20240816_001629_otp_codes_table.rs
src/: main.rs
src/backend/: mod.rs
src/backend/auth/: check.rs  mod.rs  otp_codes.rs
src/backend/requests/: post.rs  user.rs
src/backend/responses/: mod.rs  post.rs  user.rs
