[package]
name = "notes_r_us"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Note Sharing Applictions API"

[workspace]
members = [".", "./migration"]

[workspace.package]
edition = "2021"
homepage = "https://notesrus.nzdev.org"
documentation = "https://docs.rs/notes_r_us"
authors = ["Liam Tietjens <liam@nzdev.org>", "Zac S (Ellozac) <zlsy108@gmail.com>", "Yuri P (yPiuro)"]
repository = "https://github.com/l2dit/notesrus.git"
license-file = "LICENSE"
keywords = ["Api", "Notes", "Database"]

[features]
# locked_origin this dosent allow cross origin connections.
locked_origin = []

[dependencies]
swagger = "6.5.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
serde_json = "1.0.138"
chrono = "0.4.39"
chrono-tz = "0.10.1"
notes_r_us_migrations = { path = "./migration", version = "0.1.1"}
serde = "1.0.217"
sha2 = "0.10.8"
hmac = "0.12.1"
jwt = "0.16.0"
uuid = { version = "1.12.1", features = ["fast-rng", "v4"] }
names = "0.14.0"
derive_more = { version = "2.0.1", features = ["unwrap"] }
log = "0.4.25"

[dependencies.poem]
version = "3.1.6"
features = [
	"static-files",
	"multipart",
	"tempfile"
]

[dependencies.poem-openapi]
version = "5.1.5"
features = [
	"swagger-ui",
	"openapi-explorer"
]

[dependencies.clap]
version = "4.5.28"
features = [
	"derive",
	"env"
]

[dependencies.sea-orm]
version = "1.1.4"
features = [
	"runtime-tokio-rustls",
	"sqlx-mysql",
	"sqlx-postgres",
	"sqlx-sqlite"
]
