[package]
name = "notes_r_us_migrations"
version = "0.1.1"
edition = "2021"
readme = "README.md"
description = "Database Migrations For Notesrus"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license-file.workspace = true
keywords.workspace = true
authors.workspace = true

[lib]
name = "notes_r_us_migrations"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.4"
features = ["runtime-async-std-rustls", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "with-chrono"]
